<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentC">

    <TextView
        android:id="@+id/tv_fragment_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fragment_c"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_from_frgment_b"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_to_fragment_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Hello Fragment C" />

    <Button
        android:id="@+id/button_to_fragment_d"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/to_fragment_d"
        app:layout_constraintBottom_toBottomOf="@id/button_to_fragment_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_frgment_b" />

    <Button
        android:id="@+id/button_to_fragment_a"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/to_fragment_a"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_to_fragment_d" />

</androidx.constraintlayout.widget.ConstraintLayout>